Add favicon and author information

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="author" content="Vikir Dyne" />
+    <meta name="description" content="A website dedicated to Shri Narayan" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="icon" href="favicon.jpg" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Salsa"
@@ -28,8 +31,8 @@
     </p>
     <ul>
       <ol>
-        <li>Shri Vishnu</li>
-        <li>Shree Ram</li>
+        <li><strong>Shri Vishnu</strong></li>
+        <li><em>Shree Ram</em></li>
         <li>Shree Krishna</li>
       </ol>
     </ul>
