Modified the names list

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Macondo"
     />
-    <title>Narayan</title>
+    <title>OM</title>
+    <script src="scripts/main.js" defer></script>
   </head>
   <body>
     <h1>Shri Hari</h1>
@@ -31,13 +32,24 @@
     </p>
     <ul>
       <ol>
-        <li><strong>Shri Vishnu</strong></li>
-        <li><em>Shree Ram</em></li>
-        <li>Shree Krishna</li>
+        <li>
+          <strong>Shri Vishnu</strong>
+          <ul>
+            <li>Shri Ram</li>
+            <li>Shri Krishna</li>
+          </ul>
+        </li>
+        <li>
+          <strong>Shri Shiv</strong>
+          <ul>
+            <li>Shri Shankar</li>
+            <li>Shri Hanuman</li>
+          </ul>
+        </li>
       </ol>
     </ul>
     <a href="https://developer.mozilla.org">Mozilla Developer Network</a><br />
     <button>Change Name</button>
-    <script src="scripts/main.js  "></script>
+    <!-- <script src="scripts/main.js  "></script> -->
   </body>
 </html>
