Add <dl>, <dt> & <dd> tag

--- a/index.html
+++ b/index.html
@@ -48,7 +48,18 @@
         </li>
       </ol>
     </ul>
-    <a href="https://developer.mozilla.org">Mozilla Developer Network</a><br />
+    <a
+      href="https://developer.mozilla.org"
+      title="The best place to find Web Docs"
+      >Mozilla Developer Network</a
+    ><br /><br />
+    <dl>
+      <dt>OM</dt>
+      <dd>A Mantra</dd>
+      <dd>Representation of the cosmic sound</dd>
+      <dt>Hari - Har</dt>
+      <dd>Narayan and Shiv</dd>
+    </dl>
     <button>Change Name</button>
     <!-- <script src="scripts/main.js  "></script> -->
   </body>
