Made some unimportant changes

--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
     </ul>
     <a
       href="https://developer.mozilla.org"
-      title="The best place to find Web Docs"
+      title="The best place to find Web Documentation"
       >Mozilla Developer Network</a
-    ><br /><br />
+    >
+    <br /><br />
     <dl>
       <dt>OM</dt>
       <dd>A Mantra</dd>
@@ -61,6 +62,5 @@
       <dd>Narayan and Shiv</dd>
     </dl>
     <button>Change Name</button>
-    <!-- <script src="scripts/main.js  "></script> -->
   </body>
 </html>
