Added 2 html pages and added HTML layout elements

--- a/index.html
+++ b/index.html
@@ -19,48 +19,67 @@
     <script src="scripts/main.js" defer></script>
   </head>
   <body>
-    <h1>Shri Hari</h1>
-    <img
-      src="images/vishnu-ram-krishna.jpg"
-      alt="Divine image of Shree Vishnu, Shri Ram and Shri Krishna"
-    />
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad cupiditate
-      tempora eveniet dicta officiis amet, ipsam dolore aliquid! Ducimus aperiam
-      corrupti excepturi nobis dolorem ipsam, temporibus quam eos itaque
-      pariatur.
-    </p>
-    <ul>
-      <ol>
-        <li>
-          <strong>Shri Vishnu</strong>
-          <ul>
-            <li>Shri Ram</li>
-            <li>Shri Krishna</li>
-          </ul>
-        </li>
-        <li>
-          <strong>Shri Shiv</strong>
-          <ul>
-            <li>Shri Shankar</li>
-            <li>Shri Hanuman</li>
-          </ul>
-        </li>
-      </ol>
-    </ul>
-    <a
-      href="https://developer.mozilla.org"
-      title="The best place to find Web Documentation"
-      >Mozilla Developer Network</a
-    >
-    <br /><br />
-    <dl>
-      <dt>OM</dt>
-      <dd>A Mantra</dd>
-      <dd>Representation of the cosmic sound</dd>
-      <dt>Hari - Har</dt>
-      <dd>Narayan and Shiv</dd>
-    </dl>
-    <button>Change Name</button>
+    <header>
+      <h1>Shri Hari - Har</h1>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="#">Homepage</a></li>
+        <li><a href="./shiv.html">Shiv</a></li>
+        <li><a href="./narayan.html">Narayan</a></li>
+      </ul>
+    </nav>
+    <main>
+      <img
+        src="images/vishnu-ram-krishna.jpg"
+        alt="Divine image of Shree Vishnu, Shri Ram and Shri Krishna"
+      />
+      <section>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad cupiditate
+          tempora eveniet dicta officiis amet, ipsam dolore aliquid! Ducimus
+          aperiam corrupti excepturi nobis dolorem ipsam, temporibus quam eos
+          itaque pariatur.
+        </p>
+      </section>
+      <article>
+        <ul>
+          <ol>
+            <li>
+              <strong>Shri Vishnu</strong>
+              <ul>
+                <li>Shri Ram</li>
+                <li>Shri Krishna</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Shri Shiv</strong>
+              <ul>
+                <li>Shri Shankar</li>
+                <li>Shri Hanuman</li>
+              </ul>
+            </li>
+          </ol>
+        </ul>
+      </article>
+      <aside>
+        <a
+          href="https://developer.mozilla.org"
+          title="The best place to find Web Documentation"
+          >Mozilla Developer Network</a
+        >
+      </aside>
+      <br /><br />
+      <article>
+        <dl>
+          <dt>OM</dt>
+          <dd>A Mantra</dd>
+          <dd>Representation of the cosmic sound</dd>
+          <dt>Hari - Har</dt>
+          <dd>Narayan and Shiv</dd>
+        </dl>
+      </article>
+      <button>Change Name</button>
+    </main>
   </body>
 </html>
