--- a/shiv.html
+++ b/shiv.html
@@ -34,5 +34,6 @@
     <main>
       <img src="images/shankar.jpg" alt="Divine image of Shri Shankar" />
     </main>
+    <footer>Don't Reboot; Be Root</footer>
   </body>
 </html>
