--- a/narayan.html
+++ b/narayan.html
@@ -37,5 +37,6 @@
         alt="Divine image of Shree Vishnu, Shri Ram and Shri Krishna"
       />
     </main>
+    <footer>Don't Reboot; Be Root</footer>
   </body>
 </html>
