--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
       </ul>
     </nav>
     <main>
-      <img
-        src="images/vishnu-ram-krishna.jpg"
-        alt="Divine image of Shree Vishnu, Shri Ram and Shri Krishna"
-      />
+      <figure>
+        <img
+          src="images/vishnu-ram-krishna.jpg"
+          alt="Divine image of Shree Vishnu, Shri Ram and Shri Krishna"
+        />
+        <figcaption>Swayam</figcaption>
+      </figure>
       <section>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad cupiditate
